--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Persistence/Feedback.Analyzer.Persistence.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Persistence/Feedback.Analyzer.Persistence.csproj
@@ -10,4 +10,20 @@
       <ProjectReference Include="..\Feedback.Analyzer.Domain\Feedback.Analyzer.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interceptors\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
