--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
@@ -14,4 +14,8 @@
       <Folder Include="wwwroot\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
 </Project>
