--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Properties/launchSettings.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Properties/launchSettings.json
@@ -14,6 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7239;http://localhost:5182",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
