--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastucture/Feedback.Analyzer.Infrastucture.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastucture/Feedback.Analyzer.Infrastucture.csproj
@@ -11,4 +11,11 @@
       <ProjectReference Include="..\Feedback.Analyzer.Persistence\Feedback.Analyzer.Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.1.24080.9" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="RabbitMQ.Client" Version="7.0.0-alpha.3" />
+    </ItemGroup>
+
 </Project>
