--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Persistence/Feedback.Analyzer.Persistence.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Persistence/Feedback.Analyzer.Persistence.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <Folder Include="Interceptors\" />
+      <Folder Include="Repositories\Interfaces\" />
     </ItemGroup>
 
     <ItemGroup>
