--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Feedback.Analyzer.Infrastucture\Feedback.Analyzer.Infrastucture.csproj" />
+      <ProjectReference Include="..\Feedback.Analyzer.Infrastructure\Feedback.Analyzer.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
