--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnectionString": "Host=localhost;Port=5432;Database=Feedback.Analyzer;Username=postgres;Password=postgres"
   }
 }
