Change for requested changes

--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Models\DTOs\" />
       <Folder Include="wwwroot\" />
     </ItemGroup>
 
