--- a/.github/workflows/BackendDeployToRelease.yml
+++ b/.github/workflows/BackendDeployToRelease.yml
@@ -1,8 +1,7 @@
-name: Push to Azure Container Registry and deploy to Azure Container App
+name: Build and push to Azure Container Registry and deploy to Azure Container App
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - release/**
 
@@ -23,14 +22,14 @@ jobs:
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          login-server: ${{ secrets.AZ_ACR_LOGIN_SERVER }}
+          username: ${{ secrets.AZ_ACR_USERNAME }}
+          password: ${{ secrets.AZ_ACR_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./src/AzureRegistryDemo.Backend
-          file: ./src/AzureRegistryDemo.Backend/AzureRegistryDemo/Dockerfile
-          tags: ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.ACR_USERNAME }}:${{ env.IMAGE_VERSION }}
+          context: ./src/Feedback.Analyzer.Backend
+          file: ./src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Dockerfile
+          tags: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
           push: true
