Add deployment job to BackendDeployToRelease.yml

--- a/.github/workflows/BackendDeployToRelease.yml
+++ b/.github/workflows/BackendDeployToRelease.yml
@@ -1,4 +1,4 @@
-name: Build and push to Azure Container Registry and deploy to Azure Container App
+name: Build and push InsightBox backend to Azure Container Registry and deploy to Azure Container App
 
 on:
   push:
@@ -33,3 +33,27 @@ jobs:
           file: ./src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Dockerfile
           tags: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
           push: true
+
+   deploy-container-app:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+  
+    steps:
+      - name: Log in to Azure Container App
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZ_SP_CREDENTIALS }}
+
+      - name: Extract release version and Set to variable
+        id: release_version
+        run: |
+          VERSION=$(echo "${{ github.ref }}" | sed -E 's/^refs\/heads\/release\/(.*)$/\1/')
+          echo "IMAGE_VERSION=$VERSION" >> $GITHUB_ENV
+  
+      - name: Build and deploy Container App
+        uses: azure/container-apps-deploy-action@v1
+        with:
+          acrName: insightboxbackend
+          containerAppName: ${{ secrets.AZ_ACA_NAME }}
+          resourceGroup: ${{ secrets.AZ_ACA_RG_NAME }}
+          imageToDeploy: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
