Fix workflow deploy to ACA

--- a/.github/workflows/BackendDeployToRelease.yml
+++ b/.github/workflows/BackendDeployToRelease.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Build and deploy Container App
         uses: azure/container-apps-deploy-action@v1
         with:
-          acrName: insightboxbackend
+          acrName: ${{ secrets.AZ_ACR_NAME }}
           containerAppName: ${{ secrets.AZ_ACA_NAME }}
-          resourceGroup: ${{ secrets.AZ_ACA_RG_NAME }}
+          resourceGroup: ${{ secrets.AZ_RG_NAME }}
           imageToDeploy: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
