Add paths filter to BackendDeployToRelease.yml

--- a/.github/workflows/BackendDeployToRelease.yml
+++ b/.github/workflows/BackendDeployToRelease.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - release/**
+    paths:
+      - ./.github/workflows/BackendDeployToRelease.yml
+      - ./src/Feedback.Analyzer.Backend/**
 
 jobs:
   build-and-push:
