--- a/.github/workflows/FrontendDeployToRelease.yml
+++ b/.github/workflows/FrontendDeployToRelease.yml
@@ -1,11 +1,11 @@
-name: Build and push InsightBox backend to Azure Container Registry and deploy to Azure Container App
+name: Build and push InsightBox frontend to Azure Container Registry and deploy to Azure Container App
 
 on:
   push:
     branches:
       - release/**
     paths:
-      - './src/Feedback.Analyzer.Backend/**'
+      - './src/Insight.Box.FrontEnd/**'
 
 jobs:
   build-and-push:
@@ -31,9 +31,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./src/Feedback.Analyzer.Backend
-          file: ./src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Dockerfile
-          tags: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
+          context: ./src/Insight.Box.FrontEnd
+          file: ./src/Insight.Box.FrontEnd/Dockerfile
+          tags: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxfrontend:${{ env.IMAGE_VERSION }}
           push: true
 
   deploy-container-app:
@@ -56,6 +56,6 @@ jobs:
         uses: azure/container-apps-deploy-action@v1
         with:
           acrName: ${{ secrets.AZ_ACR_NAME }}
-          containerAppName: ${{ secrets.AZ_BACKEND_ACA_NAME }}
+          containerAppName: ${{ secrets.AZ_FRONTEND_ACA_NAME }}
           resourceGroup: ${{ secrets.AZ_RG_NAME }}
-          imageToDeploy: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
+          imageToDeploy: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxfrontend:${{ env.IMAGE_VERSION }}
