Update workflow files

--- a/.github/workflows/BackendDeployToRelease.yml
+++ b/.github/workflows/BackendDeployToRelease.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     types: [closed]
     branches:
-      - release/**
+      - 'release/**'
+    paths:
+      - './src/Feedback.Analyzer.Backend/**'
 
 jobs:
   build-and-push:
