--- a/.github/workflows/BackendDeployToRelease.yml
+++ b/.github/workflows/BackendDeployToRelease.yml
@@ -1,12 +1,11 @@
-name: Push to Azure Container Registry and deploy to Azure Container App
+name: Build and push InsightBox backend to Azure Container Registry and deploy to Azure Container App
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
-      - 'release/**'
+      - release/**
     paths:
-      - './src/Feedback.Analyzer.Backend/**'
+      - src/Feedback.Analyzer.Backend/**
 
 jobs:
   build-and-push:
@@ -25,14 +24,38 @@ jobs:
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          login-server: ${{ secrets.AZ_ACR_LOGIN_SERVER }}
+          username: ${{ secrets.AZ_ACR_USERNAME }}
+          password: ${{ secrets.AZ_ACR_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./src/AzureRegistryDemo.Backend
-          file: ./src/AzureRegistryDemo.Backend/AzureRegistryDemo/Dockerfile
-          tags: ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.ACR_USERNAME }}:${{ env.IMAGE_VERSION }}
+          context: src/Feedback.Analyzer.Backend
+          file: src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Dockerfile
+          tags: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
           push: true
+
+  deploy-container-app:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+  
+    steps:
+      - name: Log in to Azure Container App
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZ_SP_CREDENTIALS }}
+
+      - name: Extract release version and Set to variable
+        id: release_version
+        run: |
+          VERSION=$(echo "${{ github.ref }}" | sed -E 's/^refs\/heads\/release\/(.*)$/\1/')
+          echo "IMAGE_VERSION=$VERSION" >> $GITHUB_ENV
+  
+      - name: Build and deploy Container App
+        uses: azure/container-apps-deploy-action@v1
+        with:
+          acrName: ${{ secrets.AZ_ACR_NAME }}
+          containerAppName: ${{ secrets.AZ_BACKEND_ACA_NAME }}
+          resourceGroup: ${{ secrets.AZ_RG_NAME }}
+          imageToDeploy: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
