--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.1.24080.9" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
