--- a/.github/workflows/BackendDeployToRelease.yml
+++ b/.github/workflows/BackendDeployToRelease.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - release/**
     paths:
-      - './src/Feedback.Analyzer.Backend/**'
+      - src/Feedback.Analyzer.Backend/**
 
 jobs:
   build-and-push:
@@ -31,8 +31,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./src/Feedback.Analyzer.Backend
-          file: ./src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Dockerfile
+          context: src/Feedback.Analyzer.Backend
+          file: src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Dockerfile
           tags: ${{ secrets.AZ_ACR_LOGIN_SERVER }}/insightboxbackend:${{ env.IMAGE_VERSION }}
           push: true
 
