--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
@@ -6,6 +6,26 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnectionString": "Host=localhost;Port=5432;Database=Feedback.Analyzer;Username=postgres;Password=postgres"
+    "DbConnectionString": "Host=localhost;Port=5432;Database=Feedback.Analyzer;Username=postgres;Password=postgres",
+    "RedisConnectionString": "localhost:6379"
+  },
+  "JwtSettings": {
+    "SecretKey": "8E6225FC-6E84-4E50-805F-FB3B5B6138BE",
+    "ValidateAudience": true,
+    "ValidAudience": "MyClientApp",
+    "ValidateIssuer": true,
+    "ValidIssuer": "MyServerApp",
+    "ValidateLifeTime": true,
+    "ValidateIssuerSigningKey": true,
+    "ExpirationTimeInMinutes": 1440,
+    "RefreshTokenExpirationTimeInMinutes": 4320,
+    "RefreshTokenExtendedExpirationTimeInMinutes": 43200
+  },
+  "CacheSettings": {
+    "AbsoluteExpirationInSeconds": 1200,
+    "SlidingExpirationInSeconds": 300
+  },
+  "RequestClientContextSettings": {
+    "SystemUserId": "7dead347-e459-4c4a-85b0-8f1b373d3dec"
   }
 }
