--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
@@ -6,7 +6,17 @@
     }
   },
   "AllowedHosts": "*",
+  
   "DataAccessSettings": {
-    "UseInMemoryDatabase": true
+    "UseInMemoryDatabase": false
+  },
+  
+  "PasswordValidationSettings": {
+    "RequireDigit": true,
+    "RequireUppercase": true,
+    "RequireLowercase": true,
+    "RequireNonAlphanumeric": false,
+    "MinimumLength": 8,
+    "MaximumLength": 10
   }
 }
