Add CORS settings

--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DbConnectionString": "Host=localhost;Port=5432;Database=Feedback.Analyzer;Username=postgres;Password=postgres"
+  },
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://localhost:5173"
+    ]
   }
 }
