--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
@@ -9,5 +9,10 @@
   "ValidationSettings": {
     "EmailRegexPattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$",
     "NameRegexPattern": "^[a-zA-Z0-9_.+-]+$"
+  },
+  "CorsSettings": {
+    "AllowAnyHeaders": true,
+    "AllowAnyMethods": true,
+    "AllowCredentials": true
   }
 }
