--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="RabbitMQ.Client" Version="7.0.0-alpha.3" />
       <PackageReference Include="FluentValidation" Version="11.9.0" />
+      <PackageReference Include="Twilio" Version="7.0.0-rc.1" />
     </ItemGroup>
 
 </Project>
