--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.SemanticKernel" Version="1.5.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="Bogus" Version="35.4.0" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
