Change requested changes

--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
@@ -22,5 +22,9 @@
     "RequireNonAlphanumeric": false,
     "MinimumLength": 8,
     "MaximumLength": 10
+  },
+  "CacheSettings": {
+    "AbsoluteExpirationInSeconds": 1200,
+    "SlidingExpirationInSeconds": 300
   }
 }
