--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Application/Feedback.Analyzer.Application.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Application/Feedback.Analyzer.Application.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="AutoMapper" Version="12.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\Prompts\" />
+    </ItemGroup>
+
 </Project>
