--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Application/Feedback.Analyzer.Application.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Application/Feedback.Analyzer.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.5.0" />
     </ItemGroup>
 
     <ItemGroup>
