Add analyze feedback event and publishing from orchestration service

--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Application/Feedback.Analyzer.Application.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Application/Feedback.Analyzer.Application.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <Folder Include="Common\Prompts\" />
+      <Folder Include="CustomerFeedbacks\Events\" />
     </ItemGroup>
 
 </Project>
