Add charts to workflow card

--- a/src/Insight.Box.FrontEnd/package.json
+++ b/src/Insight.Box.FrontEnd/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "apexcharts": "^3.47.0",
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
