--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
@@ -13,14 +13,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="12.0.1" />
-      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-      <PackageReference Include="MediatR" Version="12.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.1.24080.9" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-      <PackageReference Include="RabbitMQ.Client" Version="7.0.0-alpha.3" />
-      <PackageReference Include="FluentValidation" Version="11.0.1" />
-        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="AutoMapper" Version="12.0.1"/>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+        <PackageReference Include="MediatR" Version="12.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.1.24080.9"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="RabbitMQ.Client" Version="7.0.0-alpha.3"/>
+        <PackageReference Include="FluentValidation" Version="11.0.1"/>
+        <PackageReference Include="Microsoft.SemanticKernel" Version="1.5.0"/>
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
     </ItemGroup>
 
     <ItemGroup>
