--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Domain/Feedback.Analyzer.Domain.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Domain/Feedback.Analyzer.Domain.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit" Version="8.1.3" />
       <PackageReference Include="MediatR" Version="12.2.0" />
     </ItemGroup>
 
