--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Infrastructure/Feedback.Analyzer.Infrastructure.csproj
@@ -15,7 +15,6 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-      <PackageReference Include="MassTransit" Version="8.1.3" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.1.24080.9" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -34,6 +33,10 @@
       <Reference Include="Feedback.Analyzer.Persistence">
         <HintPath>..\Feedback.Analyzer.Api\bin\Debug\net8.0\Feedback.Analyzer.Persistence.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Common\Prompts\EventHandlers\" />
     </ItemGroup>
 
 </Project>
