change organization search bar, card, tab and packages

--- a/src/Insight.Box.FrontEnd/package.json
+++ b/src/Insight.Box.FrontEnd/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "apexcharts": "^3.47.0",
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
