--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnectionString": "Host=localhost;Port=5432;Database=Feedback.Analyzer;Username=postgres;Password=postgres",
+    "DbConnectionString": "Host=localhost;Port=5432;Database=Feedback.Analyzer.Prompt.Analyzing;Username=postgres;Password=postgres",
     "RedisConnectionString": "localhost:6379"
   },
   "JwtSettings": {
