--- a/src/Insight.Box.FrontEnd/package.json
+++ b/src/Insight.Box.FrontEnd/package.json
@@ -14,7 +14,9 @@
     "@vueuse/core": "^10.9.0",
     "apexcharts": "^3.48.0",
     "axios": "^1.6.7",
+    "class-transformer": "^0.5.1",
     "pinia": "^2.1.7",
+    "reflect-metadata": "^0.2.1",
     "vue": "^3.4.15",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.5"
