--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/Feedback.Analyzer.Api.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="Bogus" Version="35.4.0" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+      <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
       <PackageReference Include="MassTransit.Newtonsoft" Version="8.1.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.2" />
