--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
@@ -32,5 +32,17 @@
   "CacheSettings": {
     "AbsoluteExpirationInSeconds": 1200,
     "SlidingExpirationInSeconds": 300
+  },
+  "JwtSettings": {
+    "SecretKey": "8E6225FC-6E84-4E50-805F-FB3B5B6138BE",
+    "ValidateAudience": true,
+    "ValidAudience": "MyClientApp",
+    "ValidateIssuer": true,
+    "ValidIssuer": "MyServerApp",
+    "ValidateLifeTime": true,
+    "ValidateIssuerSigningKey": true,
+    "ExpirationTimeInMinutes": 1440,
+    "RefreshTokenExpirationTimeInMinutes": 4320,
+    "RefreshTokenExtendedExpirationTimeInMinutes": 43200
   }
 }
