Update CORS settings

--- a/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
+++ b/src/Feedback.Analyzer.Backend/Feedback.Analyzer.Api/appsettings.json
@@ -13,7 +13,10 @@
   "CorsSettings": {
     "AllowAnyHeaders": true,
     "AllowAnyMethods": true,
-    "AllowCredentials": true
+    "AllowCredentials": true,
+    "AllowedOrigins": [
+      "https://insight-box-frontend.proudgrass-5476634c.eastus.azurecontainerapps.io"
+    ]
   },
   "DataAccessSettings": {
     "UseInMemoryDatabase": false
