--- a/src/Insight.Box.FrontEnd/Dockerfile
+++ b/src/Insight.Box.FrontEnd/Dockerfile
@@ -1,22 +1,21 @@
-FROM node:lts-alpine
+# Step 1: Build the Vue.js application
+FROM node:lts-alpine as build-stage
 
-# install simple http server for serving static content
-RUN npm install -g http-server
-
-# make the 'app' folder the current working directory
 WORKDIR /app
-
-# copy both 'package.json' and 'package-lock.json' (if available)
 COPY package*.json ./
-
-# install project dependencies
 RUN npm install
-
-# copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY . .
-
-# build app for production with minification
 RUN npm run build
 
-EXPOSE 8080
-CMD [ "http-server", "dist" ]
+# Step 2: Set up Nginx to serve the app
+FROM nginx:stable-alpine as production-stage
+
+# Copy the built app from the previous stage
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+
+# Custom Nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
